--- a/templates/owner/dashboard.html
+++ b/templates/owner/dashboard.html
@@ -406,7 +406,7 @@
                 <div class="homestay-details">
                     <div class="homestay-detail">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>{{ room.address }}</span>
+                        <span>{{ format_full_address(room.address, None, room.district, room.city) }}</span>
                     </div>
                     <div class="homestay-detail">
                         <i class="fas fa-money-bill"></i>
